<resources>
    <string name="app_name">My Application</string>
    <string name="welcome_to">WELCOME TO</string>
    <string name="fatbook">FatBook</string>
    <string name="log_in">LOG IN</string>
    <string name="FatBook_tagline">get your forks ready</string>
    <string name="copyrigh">PotatoCorpⒸ2022</string>
    <string name="login">LOGIN</string>
    <string name="cat_dialog">Hello, Im Kuzya! \n How can I call you??</string>
    <string name="fill_username">Username</string>
    <string name="username_description">*Allows only letters and numbers, max length 16 chars</string>

    <string name="msg_wrong_username">Allows only letters and numbers,\n max length 16 chars</string>

    <string name="next_step_btn">NEXT</string>
    <string name="new_cook_in">NEW COOK IN</string>
    <string name="first_meet">Nice to meet you, USERNAME!\n Do you want to tell about \n yourself?</string>
    <string name="yeah_go">YEAH, GO!</string>
    <string name="no_later">LATER</string>
    <string name="username">Username</string>
    <string name="firstname">First Name</string>
    <string name="secondname">Second Name</string>
    <string name="bday">Birthday</string>
    <string name="sex">Sex</string>
    <string name="save">SAVE</string>
</resources>