<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to"
        android:textSize="24dp"
        android:textColor="@color/primary_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="88dp"
        />

        <TextView
            android:id="@+id/textView_FatBook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fatbook"
            android:textSize="45sp"
            android:textColor="@color/primary_pink"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_Welcome"
            android:paddingBottom="60dp"
            />

    <ImageView
        android:id="@+id/imageView_catChef"
        android:layout_width="200dp"
        android:layout_height="300dp"
        app:srcCompat="@drawable/kuzya_chef"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_FatBook"
        android:paddingBottom="20dp"
        />

    <Button
        android:id="@+id/button_LogInWithGoogle"
        android:layout_width="234dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/primary_pink"
        android:elevation="6dp"
        android:stateListAnimator="@null"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:translationZ="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView_catChef"
        />

    <TextView
        android:id="@+id/textView_FatBook_tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FatBook_tagline"
        android:textColor="@color/secondary_text"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_LogInWithGoogle"
        android:layout_marginTop="23dp"
        />

    <TextView
        android:id="@+id/textView_copyrigh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyrigh"
        android:textColor="@color/secondary_text"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingBottom="10dp"
        />

    <ImageView
        android:id="@+id/imageView_google_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:elevation="10dp"
        android:contentDescription="@string/login"
        app:layout_constraintBottom_toBottomOf="@id/button_LogInWithGoogle"
        app:layout_constraintLeft_toLeftOf="@id/button_LogInWithGoogle"
        app:layout_constraintTop_toTopOf="@id/button_LogInWithGoogle"
        android:layout_marginLeft="24dp"
        app:srcCompat="@drawable/log_in_google_play_icon"
        />
</androidx.constraintlayout.widget.ConstraintLayout>