<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary_light">

    <TextView
        android:id="@+id/textView_new_cook_in_fb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:paddingTop="88dp"
        android:text="@string/new_cook_in"
        android:textColor="@color/primary_text"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_FatBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/fatbook"
        android:textColor="@color/primary_pink"
        android:textSize="45sp"
        android:fontFamily="@font/roboto"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_new_cook_in_fb" />

    <TextView
        android:id="@+id/textView_cat_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:paddingTop="70dp"
        android:text="@string/first_meet"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:fontFamily="@font/roboto_light"
        app:layout_constraintBottom_toTopOf="@id/imageView_cat_dialog"
        app:layout_constraintLeft_toLeftOf="@id/imageView_cat_dialog"
        app:layout_constraintRight_toRightOf="@id/imageView_cat_dialog"
        app:layout_constraintTop_toTopOf="@id/imageView_cat_dialog" />

    <ImageView
        android:id="@+id/imageView_cat_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/dialog"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_FatBook" />

    <ImageView
        android:id="@+id/ImageView_kuzya_talk"
        android:layout_width="180dp"
        android:layout_height="260dp"
        android:src="@drawable/kuzya_real_talk"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView_cat_dialog" />

    <Button
        android:id="@+id/button_yeah_go"
        android:layout_width="234dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/primary_pink"
        android:elevation="6dp"
        android:fontFamily="@font/roboto_light"
        android:stateListAnimator="@null"
        android:text="@string/yeah_go"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:translationZ="4dp"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ImageView_kuzya_talk" />

    <Button
        android:id="@+id/button_Next"
        android:layout_width="234dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/primary_dark"
        android:elevation="6dp"
        android:fontFamily="@font/roboto_light"
        android:stateListAnimator="@null"
        android:text="@string/no_later"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:translationZ="4dp"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_yeah_go" />

    <TextView
        android:id="@+id/textView_copyrigh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyrigh"
        android:textColor="@color/secondary_text"
        android:textSize="11sp"
        android:fontFamily="@font/roboto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingBottom="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>