<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<TextView
    android:id="@+id/first_enter_login"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/login"
    android:textSize="24sp"
    android:textColor="@color/primary_text"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:paddingTop="88dp"
    />

    <TextView
        android:id="@+id/textView_FatBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fatbook"
        android:textSize="45sp"
        android:textColor="@color/primary_pink"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_enter_login"
        android:paddingBottom="40dp"

        />

    <ImageView
        android:id="@+id/imageView_cat_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/dialog"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_FatBook"
        />

    <TextView
        android:id="@+id/textView_cat_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cat_dialog"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:elevation="10dp"
        app:layout_constraintTop_toTopOf="@id/imageView_cat_dialog"
        app:layout_constraintRight_toRightOf="@id/imageView_cat_dialog"
        app:layout_constraintLeft_toLeftOf="@id/imageView_cat_dialog"
        app:layout_constraintBottom_toTopOf="@id/imageView_cat_dialog"
        android:paddingTop="70dp"
        />

    <ImageView
        android:id="@+id/ImageView_kuzya_talk"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:src="@drawable/kuzya_real_talk"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView_cat_dialog"
        />


</androidx.constraintlayout.widget.ConstraintLayout>